# rag-application

./: .gitignore  README.md  pyproject.toml
app/: gradio_ui.py  llm.py  main.py  rag.py  schemas.py
app/core/: logger.py
app/helpers/: exceptionHandler.py
app/routes/: chatRoute.py
app/service/: chatService.py
