[project]
name = "basic-rag-pipine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "fastapi>=0.136.3",
    "gradio>=6.18.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3.8",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.4",
    "logger>=1.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.13.2",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "uvicorn>=0.49.0",
]
